# vSLDA

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  ml-ci.yml
configs/experiments/: 20newsgroup.example.yaml  my_corpus.example.yaml
docs/: architecture.md  artifacts.md  preprocessing.md  user_guide.md
scripts/: setup_nltk.py
src/baselines/: __init__.py  adapter_runtime.py  adapter_specs.py  adapters.py  artifact_alignment.py  contracts.py  dataset_adapters.py  model_kinds.py  params.py  registry.py  runners.py
src/cli/: __init__.py  app.py  data_commands.py  evaluation_commands.py  experiment_commands.py  options.py  workflows.py
src/core/: __init__.py  artifacts.py  contracts.py  errors.py  io.py  path_builders.py  path_pointers.py  path_resolution.py  paths.py  paths_roots.py  progress.py  result_identity.py  runner_contracts.py  runtime.py
src/data/: __init__.py  catalog.py  corpus.py  datasets.py  newsgroups.py  newsgroups_subset.py  nyt.py  prepare_wikipedia_reference_corpus_from_dump.py  preprocessing.py  preprocessing_audit.py  sample_tokenized_reference_corpus.py  segmentation.py  sentence_quality.py  splits.py  text_processing.py
src/evaluation/: __init__.py  model_provenance.py  registry.py  reporting.py  schema.py  source_data.py
src/experiments/: baseline_runner.py  comparison_runner.py  config.py  config_loader.py  config_parsers.py  config_schema.py  execution.py  job_planning.py  performance.py  summary_builder.py  summary_schema.py  vmf_runner.py
src/models/: __init__.py  contracts.py  registry.py  vmf_artifacts.py  vmf_encoding.py  vmf_inference.py  vmf_numba.py  vmf_sentence_lda.py
src/utils/: embedding_preprocess.py  encoder.py  encoder_inputs.py  encoder_profiles.py  english_tokenizer.py  evaluation.py  japanese_tokenizer.py  logging.py  random.py  usif_encoder.py
tests/: conftest.py
tests/baselines/: test_artifact_raw_doc_indices.py  test_baseline_dataset_adapters.py  test_runners.py  test_senclu_contracts.py  test_shared_preprocessing_integration.py
tests/cli/: test_cli.py  test_cli_workflows.py
tests/core/: test_artifacts.py  test_io.py  test_paths.py
tests/data/: test_data_catalog.py  test_data_catalog_scripts.py  test_data_datasets.py  test_nyt_prepare.py  test_preprocessing_audit.py  test_preprocessing_selection.py  test_sentence_quality.py  test_splits.py  test_text_processing.py
tests/evaluation/: test_common_layers.py  (+5 more)
(+135 files in other folders)
