[project]
name = "spherical-sentence-topics"
version = "0.1.0"
description = "CLI-first research codebase for running, comparing, and evaluating vMF Sentence LDA and baseline topic modeling experiments."
readme = "README.md"
authors = [
    {name = "koba-r",email = "koba.r.uipanda@gmail.com"}
]
requires-python = ">=3.12,<3.15"
keywords = ["topic-modeling", "sentence-embeddings", "experiments", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "jlc-choldate (>=0.4,<0.5)",
    "nltk (>=3.9.2,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pysbd (>=0.3.4,<0.4.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "cython (>=3.2.2,<4.0.0)",
    "progressbar (>=2.5,<3.0)",
    "gensim (>=4.4.0,<5.0.0)",
    "parmap (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "stopwordsiso (>=0.6.1,<0.7.0)",
    "typer (>=0.16.1,<1.0.0)",
    "numba (>=0.65.0,<0.66.0)"
]

[project.urls]
Repository = "https://github.com/koba-r/spherical-sentence-topics"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
    { include = "scripts" },
]

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]
ml = [
    "bertopic (>=0.17.4,<0.18.0)",
    "contextualized-topic-models (>=2.6.1,<3.0.0)",
    "protobuf (>=6.33.2,<7.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.3,<5.0.0)"
]

[project.scripts]
setup-nltk = "scripts.setup_nltk:main"
spherical-sentence-topics = "src.cli.app:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests as integration tests requiring real fixtures",
]
